# RusTeam

./: Схема.drawio
fastApi/: main.py  pyproject.toml
fastApi/parsers/etp.tatneft/: service.py
fastApi/parsers/etp.tatneft/scrapyparser/scrapyparser/: middlewares.py  settings.py
fastApi/parsers/etp.tatneft/scrapyparser/scrapyparser/spiders/: spider.py
fastApi/parsers/tender.pro/: data.csv  main.py  requirements.txt  tenderpor_class_parser.py  tenderpro_parser.py
fastApi/parsers/tender.pro/linux_project/: Dockerfile  main.py  tender_pro_linux.py  word_filter.py
frontend/: .env  package-lock.json  package.json
frontend/public/: index.html
frontend/src/components/: LoaderBig.vue  ModalWindow.vue  SearchDocumentWindow.vue  SidebarMain.vue  Switcher.vue  TenderCard.vue  TenderWindow.vue
frontend/src/router/: index.js
frontend/src/views/: MainPage.vue  SearchDocument.vue  Tender.vue
