[tool.poetry]
name = "rusteam"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.7.2"
fastapi = "^0.110.0"
scrapy = "^2.11.1"
beautifulsoup4 = "^4.12.3"
scrapy-selenium = "^0.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
